<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="CAN_MSG" Id="{9211ddd6-2c71-42b3-b63f-ea004e11d2ed}">
    <Declaration><![CDATA[TYPE CAN_MSG :
STRUCT
	ID   : UDINT;
	DLC  : BYTE;
	DATA : ARRAY[0..7] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>